# Food-Store-5

./: CHECKLIST.md  README.md  requirements.txt
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0002_pedido_snapshot_campos.py  0c653a5230b5_initial_schema.py
backend/app/: main.py
backend/app/core/: config.py  enums.py
backend/app/core/db/: __init__.py  base.py  bootstrap.py  models_loader.py  session.py
backend/app/core/repository/: __init__.py  base_repository.py
backend/app/core/security/: __init__.py  jwt_tokens.py  password.py
backend/app/core/uow/: __init__.py  unit_of_work.py
backend/app/db/: seed.py
backend/app/integrations/: __init__.py  producto_imagen_groq.py
backend/app/modules/admin/: __init__.py  router.py  schemas.py  service.py
backend/app/modules/auth/: __init__.py  exceptions.py  login_throttle.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/categorias/: exceptions.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/direcciones_entrega/: __init__.py  model.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/ingredientes/: exceptions.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/pagos/: __init__.py  exceptions.py  mercadopago_gateway.py  (+5 more)
backend/tests/: conftest.py  test_auth.py  test_auth_completo.py  test_categorias.py  test_direcciones.py  test_domain_enums.py  test_health.py  test_ingredientes.py  test_pagos.py  test_pedidos_cliente_api.py  test_pedidos_fsm.py  test_productos.py
(+99 files in other folders)
